@@ -75,7 +75,7 @@
 
 }
 
- Mx=12;
+ Mx=24;
 My=0.0;
 P=300/Mx^2*16^2;
 T=238;
@@ -392,8 +392,8 @@ Cycle(
     if (iter==1,
       CFL=0.01;
     );
-    if (iter<5000,
-      CFLmax=0.6;
+    if (iter<7000,
+      CFLmax=0.8;
       Model(
         NavierStokesPlasma(Tmax=8000; emfieldworkheatfact=0.0;);
         Epotential(Jmax=200;);
@@ -401,7 +401,7 @@ Cycle(
     ,{else}
       CFLmax=0.1;
       Model(
-        NavierStokesPlasma(Tmax=10000; emfieldworkheatfact=1.0;);
+        NavierStokesPlasma(Tmax=13000; emfieldworkheatfact=1.0;);
         Epotential(Jmax=200000;);
       );
     );
@@ -419,40 +419,6 @@ Cycle(
 
 
 Post(
-  xstation[1]=0.1; {m}
-  xstation[2]=0.2; {m}
-  xstation[3]=0.3; {m}
-  numsteps=300;
-  qmin=1.0; {m/s, as small a value as possible}
-  Pback_min=400; {Pa}
-  Pback_max=40000; {Pa}
-  Aback=1.0; {m2/m}
-  for (cnt,1,3,
-    XSTATION_Set(xstation[cnt]);
-    Pback=XSTATION_Pback(Aback, Pback_min, Pback_max, numsteps, qmin);
-    Fpot=XSTATION_Fpot(Pback, numsteps, qmin);
-    mdot=XSTATION_mdot();
-    Tstag=XSTATION_Tstag();
-    Pstag=XSTATION_Pstag(numsteps);
-    Pstar=XSTATION_Pstar();
-    T=XSTATION_T();
-    q=XSTATION_q();
-    rho=XSTATION_rho();
-    htstar=XSTATION_htstar();
-    printf("x      = %E m\n"
-           "Pback  = %E Pa\n"
-           "Fpot   = %E Ns/kg\n"
-           "mdot   = %E kg/ms\n"
-           "htstar = %E J/kg\n"
-           "Tstag  = %E K\n"
-           "Pstag  = %E Pa\n"
-           "Pstar  = %E Pa\n"
-           "T      = %E K\n"
-           "q      = %E m/s\n"
-           "rho    = %E kg/m3\n\n"
-           ,xstation[cnt],Pback,Fpot,mdot,htstar,Tstag,Pstag,Pstar,T,q,rho);
-  );
-  printf("\n");
   for (dim,1,2,
     Area[dim]=_Area(is,js, ie,je, dim,BDRY_WALLTFIXED1);
     Fshear[dim]=_Fshear(is,js, ie,je, dim,BDRY_WALLTFIXED1);
